fix jump when scrolling down and status line becomes fixed

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -322,6 +322,10 @@ body {
         }
       }
     }
+
+    &.fixed + div.list-block {
+      margin-top: 45px;
+    }
   }
 
   .list-block {
